Add custom exceptions for file handling and enhance resume processing validation